Missing Traffic Annotation added to ServiceWorkerFetchDispatcher.

Missing traffic annotation added to
ServiceWorkerFetchDispatcher::MaybeStartNavigationPreloadWithURLLoader

Bug: 766239
Bug: 656607
Change-Id: I4df9cd4389cfe494fb34176f9efe005f76a24f73
Reviewed-on: https://chromium-review.googlesource.com/678498
Commit-Queue: Ramin Halavati <rhalavati@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504357}
Former-commit-id: efcf82b4e1b878296bfec8325e84e4b910b1b362